--- a/style.css
+++ b/style.css
@@ -1,4 +1,37 @@
+html {
+    font-size: 16px;
+    line-height: 1.5;
+    font-family: "Times New Roman", "Avenir Next", Avenir, "Helvetica Neue";
+    box-sizing: border-box;
+}
+
 body {
     background-color: rgb(53, 132, 235);
     background-image: url(weather-background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+}
+
+#navText {
+    /* align-self: center; ????*/
+}
+
+#searchHeader {
+    color: white;
+}
+#sideColumn {
+    background-color: rgba(195, 195, 195, 0.459);
+    margin: 0px;
+}
+
+#mainColumn {
+    background-color: rgba(195, 195, 195, 0.459);
+}
+
+#currentWeather {
+    padding: 1px;
 }
